fix error in image

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 
             </p>    
         </section>
-        <img class="imagen_presentacion" src="assets/Imagem.jpg" alt="Imagen persona en computador">
+        <img class="imagen_presentacion" src="assets/imagem.jpg" alt="Imagen persona en computador">
 
     </main>
    
