--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="presentacion_enlaces_boton" href="https://github.com/ortegons"> <img src="assets/twitch.png" alt="Logo Twitch"> Twitch</a>
         </div>
         </section>
-        <img class="imagen_presentacion" src="assets/Imagem.jpg" alt="Imagen persona en computador">
+        <img class="imagen_presentacion" src="assets/imagem.png" alt="Imagen persona en computador">
     </main> 
     <footer class="footer">
         <p>Desarrolado por Antha Dev ® </p>
